--- a/frontend-web/src/Home/styles.css
+++ b/frontend-web/src/Home/styles.css
@@ -2,9 +2,9 @@
   user-select: none;
 }
 
-.home-container {
-  height: calc(100vh - 226px);
-  padding-top: 100px;
+.home-content {
+  padding-top: 70px;
+  height: calc(100vh - 254px);
 }
 
 .home-container h1 {
@@ -13,25 +13,27 @@
 
 .home-content {
   display: flex;
-  justify-content: center;
+
+  align-items: center;
+  justify-content: space-around;
 }
 
 .home-title {
   color: var(--dark-color);
-  font-size: 3.038em;
+  font-size: 55px;
   font-weight: bolder;
 
-  line-height: 1.126em;
-  letter-spacing: -0.014em;
+  line-height: 48px;
+  letter-spacing: -0.015em;
   margin-bottom: 40px !important;
 }
 
 .home-subtitle {
   color: var(--secondary-color);
-  font-size: 1.2em;
+  font-size: 18px;
   font-weight: normal;
 
-  line-height: 1em;
+  line-height: 23px;
   letter-spacing: -0.016em;
   margin-bottom: 40px;
 }
@@ -42,19 +44,23 @@
   border-radius: 10px;
   color: var(--light-color);
   display: flex;
-  font-weight: bold;
-  font-size: 1.2em;
-  height: 60px;
+  font-weight: bolder;
+  font-size: 20px;
+  height: 50px;
   justify-content: center;
   letter-spacing: -0.016em;
   text-decoration: none;
   text-transform: uppercase;
-  width: 235px;
+  width: 205px;
 }
 
 .home-btn-order:hover {
   background-color: var(--primary-hover-color);
   transform: scale(1.01);
+}
+
+.home-image svg {
+  width: 80% !important;
 }
 
 .home-image:hover {
